[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/mouse_over.png" type="Texture" id=1]
[ext_resource path="res://Scripts/SelectableArea.gd" type="Script" id=2]
[ext_resource path="res://Assets/Win_sound.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 45.0

[node name="POS" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="mouseover" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="x_o" type="Sprite" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="input_event" from="." to="." method="_on_POS_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_POS_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_POS_mouse_exited"]
